k8s/apps/ai-model/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-model
  namespace: prod-ai
spec:
  replicas: 1
